# tagged-binary-serialization

./: cargo.toml
src/: lib.rs
tagged_binary_serialization/: Cargo.toml
tagged_binary_serialization/src/: errors.rs  lib.rs  type_specification.rs
tagged_binary_serialization/src/decode/: floats.rs  mod.rs  signed.rs  string.rs  structs.rs  unsigned.rs
tagged_binary_serialization/src/encode/: floats.rs  mod.rs  signed.rs  string.rs  structs.rs  unsigned.rs
tagged_binary_serialization_derive/: Cargo.toml
tagged_binary_serialization_encoder/: Cargo.toml
tagged_binary_serialization_encoder/src/: lib.rs
